syntax = "proto3";

package us_state;

option go_package = "northwind/proto/us_state";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "typespb.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "northwind";
        version: "1.0";
        description: "Boilerplate code generated by xo-grpc. Modify proto/*.proto files then run 'compile.sh' script on proto directory to change the services interface.";
        contact: {
            name: "xo-grpc - Walter Wanderley";
            url: "https://github.com/walterwanderley/xo-grpc";
        };
    };
};
service UsState {
    
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/us-state/{stateID}"
            
        };
    }
    
    rpc Insert(InsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/us-state"
            body: "*"
            
        };
    }
    
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/us-state/{stateID}"
            body: "*"
            
        };
    }
    
    rpc Upsert(UpsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/us-state/upsert"
            body: "*"
            
        };
    }
    
    rpc UsStateByStateID(UsStateByStateIDRequest) returns (typespb.UsState) {
        option (google.api.http) = {
            get: "/v1/us-state/{stateID}"
            
        };
    }
    
}

message DeleteRequest { 
    int32 stateID = 1;
}

message InsertRequest { 
    google.protobuf.StringValue stateAbbr = 1;
    int32 stateID = 2;
    google.protobuf.StringValue stateName = 3;
    google.protobuf.StringValue stateRegion = 4;
}

message UpdateRequest { 
    google.protobuf.StringValue stateAbbr = 1;
    // Output only.
    int32 stateID = 2;
    google.protobuf.StringValue stateName = 3;
    google.protobuf.StringValue stateRegion = 4;
}

message UpsertRequest { 
    google.protobuf.StringValue stateAbbr = 1;
    int32 stateID = 2;
    google.protobuf.StringValue stateName = 3;
    google.protobuf.StringValue stateRegion = 4;
}

message UsStateByStateIDRequest { 
    int32 stateID = 1;
}
